Kubernetes/zadania/Todos/deploy/backup-mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backup-reader
spec:
  containers:
    - name: reader
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: backup-volume
          mountPath: /backup
          readOnly: true
  volumes:
    - name: backup-volume
      persistentVolumeClaim:
        claimName: mongo-backup-pvc
