Kubernetes/zadania/Todos/deploy/deploy-be-initcon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
      - name: external-registry
      containers:
      - name: api
        image: dawid.azurecr.io/todos-be
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /api
            port: 3001
          initialDelaySeconds: 20
          periodSeconds: 5
